Fix: Not showing radio buttons

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ input, select, textarea {
 *[type="radio"], *[type="checkbox"] {
     margin: 0px 3px 0px 5px;
     align-self: center;
+    width: 1vw;
 }
 
 .five-columns {
